FIX - Map z-index

--- a/inc/scss/_theme.scss
+++ b/inc/scss/_theme.scss
@@ -99,6 +99,7 @@
 .map {
     position: relative;
     margin-top: -7em;
+    z-index: 2;
     
     &:before {
         content:'';
